--- a/index.html
+++ b/index.html
@@ -1,150 +1,147 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>Portfolio landing page</title>
-	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/stye.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width">
 </head>
 
-<body class="body">
-
+<body>
 	<div class="wrapper">
-		<div class="page">
+		<header class="header">
+			<div class='_container'>
+				<div class="header__body">
+					<a href="#" class="header__logo">
+						<img src="img/logo.jpg" alt="">
+					</a>
+					<nav class="header__menu">
+						<ul class="header__list">
+							<a href="#home" class="header__link">
+								<li class="_header__item header__link header__link_home">Home</li>
+							</a>
+							<a href="#about" class="header__link">
+								<li class="_header__item header__link header__link_about_me">About me</li>
+							</a>
+							<a href="#skills" class="header__link">
+								<li class="_header__item header__link header__link_skills">Skills</li>
+							</a>
+							<a href="#portfolio" class="header__link">
+								<li class="_header__item header__link header__link_portfolio">Portfolio</li>
+							</a>
+							<a href="#contacts" class="header__link">
+								<li class="_header__item header__link header__link_contacts">Contacts</li>
+							</a>
+						</ul>
+					</nav>
+				</div>
+				<div class="header__burger">
+					<span></span>
+				</div>
+			</div>
+		</header>
+		<section id="home">
+			<div class="home__container _container">
+				<div class="home__text">
+					<h1 class="home__title">Denis <br> Novik</h1>
+					<div class="home__sub-title">UX | UI designer <br> 24 years old, Minsk</div>
+					<p class="header__lang"><span>RU</span> | ENG</p>
+				</div>
+				<div class="home__main-img">
+					<img src="img/home/home-img.jpg" alt="Парень" class="home__img-lg-md">
+					<img src="img/home/home-img-sm.jpg" alt="Парень" class="home__img-sm">
+				</div>
+			</div>
+		</section>
+		<section id="about">
+			<div class="about__container">
+				<h2 class="about__title title">About me</h2>
+				<p class="about__text">Hi, I'm Denis – UX/UI designer from Minsk.
+					I'm interested in design and everything connected with it.</p>
+				<p class="about__text">I'm studying at courses "Web and mobile design
+					interfaces" in IT-Academy.</p>
+				<p class="about__text">Ready to implement excellent projects
+					with wonderful people.</p>
+			</div>
+		</section>
+		<section id="skills">
+			<div class="skills__container">
+				<h2 class="skills__title title">Skills</h2>
+				<p class="skills__sub-title sub-title">I work in such programs as</p>
+				<div class="skills__items">
+					<div class="skills__item">
+						<img src="img/skills/ph.png" alt="" class="skills__item-img">
+					</div>
+					<div class="skills__item">
+						<img src="img/skills/ai.png" alt="" class="skills__item-img">
+					</div>
+					<div class="skills__item">
+						<img src="img/skills/ae.png" alt="" class="skills__item-img">
+					</div>
+					<div class="skills__item">
+						<img src="img/skills/fg.png" alt="" class="skills__item-img">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="portfolio">
+			<div class="portfolio__container">
+				<h2 class="portfolio__title title">Portfolio</h2>
+				<div class="portfolio__items">
 
-					<div class="header">
-						<div class='header__container _container'>
-							<div class="header__nav">
-								<nav class="header__list header__menu header__menu-lg">
-									<ul class="header__list ">
-										<a href="#home" class="header__link">
-											<li class="_header__item header__link">Home</li>
-										</a>
-										<a href="#about" class="header__link">
-											<li class="_header__item header__link">About me</li>
-										</a>
-										<a href="#skills" class="header__link">
-											<li class="_header__item header__link">Skills</li>
-										</a>
-										<a href="#portfolio" class="header__link">
-											<li class="_header__item header__link">Portfolio</li>
-										</a>
-										<a href="#contacts" class="header__link">
-											<li class="_header__item header__link">Contacts</li>
-										</a>
-									</ul>
-								</nav>
-							</div>
-							<div class="header__burger">
-								<span></span>
-							</div>
-						</div>
-					</div>	
-			<section class="main">
-				<section id="home">
-					<div class="home__container">
-						<div class="home__text">
-							<h1 class="home__title">Denis <br> Novik</h1>
-							<div class="home__sub-title">UX | UI designer <br> 24 years old, Minsk</div>
-							<p class="header__lang"><span>RU</span> | ENG</p>
-						</div>
-						<div class="home__main-img">
-							<img src="img/home/home-img.jpg" alt="Парень" class="home__img-lg-md">
-							<img src="img/home/home-img-sm.jpg" alt="Парень" class="home__img-sm">
-						</div>
-					</div>
-				</section>
-				<section id="about">
-					<div class="about__container">
-						<h2 class="about__title">About me</h2>
-						<p class="about__text">Hi, I'm Denis – UX/UI designer from Minsk.
-							I'm interested in design and everything connected with it.</p>
-						<p class="about__text">I'm studying at courses "Web and mobile design
-							interfaces" in IT-Academy.</p>
-						<p class="about__text">Ready to implement excellent projects
-							with wonderful people.</p>
-					</div>
-				</section>
-				<section id="skills">
-					<div class="skills__container">
-						<h2 class="skills__title title">Skills</h2>
-						<p class="skills__sub-title sub-title">I work in such programs as</p>
-						<div class="skills__items">
-							<div class="skills__item">
-								<img src="img/skills/ph.png" alt="" class="skills__item-img">
-							</div>
-							<div class="skills__item">
-								<img src="img/skills/ai.png" alt="" class="skills__item-img">
-							</div>
-							<div class="skills__item">
-								<img src="img/skills/ae.png" alt="" class="skills__item-img">
-							</div>
-							<div class="skills__item">
-								<img src="img/skills/fg.png" alt="" class="skills__item-img">
-							</div>
-						</div>
-					</div>
-				</section>
-				<section id="portfolio">
-					<div class="portfolio__container">
-						<h2 class="portfolio__title title">Portfolio</h2>
-						<div class="portfolio__items">
-
-							<div class="portfolio__item">
-								<a href="#popup-portfolio-1">
-									<img src="img/portfolio/01.png" alt="" class="portfolio__img">
-									<p class="portfolio__item-title">Online fashion store - Homepage</p>
-								</a>
-								<div class="popup" id="popup-portfolio-1">
-									<a href="#advantages" class="popup__area"></a>
-									<div class="popup__body">
-										<div class="popup__content">
-											<a href="#header" class="popup__close close-popup">X</a>
-											<div>
-												<img src="img/portfolio/01.png" alt="" class="portfolio__img portfolio__img-popup-1">
-											</div>
-										</div>
+					<div class="portfolio__item">
+						<a href="#popup-portfolio-1">
+							<img src="img/portfolio/01.png" alt="" class="portfolio__img">
+							<p class="portfolio__item-title">Online fashion store - Homepage</p>
+						</a>
+						<div class="popup" id="popup-portfolio-1">
+							<!-- <a href="#advantages" class="popup__area"></a> -->
+							<div class="popup__body">
+								<div class="popup__content">
+									<a href="#header" class="popup__close close-popup">X</a>
+									<div>
+										<img src="img/portfolio/01.png" alt="" class="portfolio__img portfolio__img-popup-1">
 									</div>
 								</div>
 							</div>
+						</div>
+					</div>
 
-							<div class="portfolio__item">
-								<a href="#popup-portfolio-2">
+					<div class="portfolio__item">
+						<a href="#popup-portfolio-2">
+							<img src="img/portfolio/02.png" alt="" class="portfolio__img">
+							<p class="portfolio__item-title portfolio__item-title">Reebok Store - Concept</p>
+						</a>
+						<div class="popup" id="popup-portfolio-2">
+							<!-- <a href="#advantages" class="popup__area"></a> -->
+							<div class="popup__body">
+								<div class="popup__content">
+									<a href="#header" class="popup__close close-popup">X</a>
 									<img src="img/portfolio/02.png" alt="" class="portfolio__img">
-									<p class="portfolio__item-title portfolio__item-title">Reebok Store - Concept</p>
-								</a>
-								<div class="popup" id="popup-portfolio-2">
-									<a href="#advantages" class="popup__area"></a>
-									<div class="popup__body">
-										<div class="popup__content">
-											<a href="#header" class="popup__close close-popup">X</a>
-											<img src="img/portfolio/02.png" alt="" class="portfolio__img">
-										</div>
-									</div>
-								</div>
-							</div>
-
-							<div class="portfolio__item">
-								<a href="#popup-portfolio-3">
-									<img src="img/portfolio/03.png" alt="" class="portfolio__img">
-									<p class="portfolio__item-title portfolio__item-title">Braun Landing Page - Concept</p>
-								</a>
-								<div class="popup" id="popup-portfolio-3">
-									<a href="#advantages" class="popup__area"></a>
-									<div class="popup__body">
-										<div class="popup__content">
-											<a href="#header" class="popup__close close-popup">X</a>
-											<img src="img/portfolio/03.png" alt="" class="portfolio__img">
-										</div>
-									</div>
 								</div>
 							</div>
 						</div>
 					</div>
-				</section>
-		</div>
+
+					<div class="portfolio__item">
+						<a href="#popup-portfolio-3">
+							<img src="img/portfolio/03.png" alt="" class="portfolio__img">
+							<p class="portfolio__item-title portfolio__item-title">Braun Landing Page - Concept</p>
+						</a>
+						<div class="popup" id="popup-portfolio-3">
+							<!-- <a href="#advantages" class="popup__area"></a> -->
+							<div class="popup__body">
+								<div class="popup__content">
+									<a href="#header" class="popup__close close-popup">X</a>
+									<img src="img/portfolio/03.png" alt="" class="portfolio__img">
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 		<section id="contacts">
 			<div class="contacts__container">
 				<h2 class="contacts__title title">Contacts</h2>
@@ -152,6 +149,20 @@
 				<button class="contacts__btn">
 					<a href="#popup-contact" class="popup-link">Send message</a>
 				</button>
+				<div class="popup" id="popup-contact">
+					<!-- <a href="#advantages" class="popup__area"></a> -->
+					<div class="popup__body">
+						<div class="popup__content">
+							<a href="#header" class="popup__close close-popup">X</a>
+							<div class="popup__title popup-link">Напишите нам</div><br>
+							<div>
+								<textarea class="popup__text" name="" id="" placeholder="Ввкдите Ваше сообщение" cols="30"
+									rows="10"></textarea>
+								<button class="popup__btn-contact">Отправить</button>
+							</div>
+						</div>
+					</div>
+				</div>
 				<div class="contacts__local-items">
 					<div class="contacts__local-item">
 						<img src="img/contacts/01.png" alt="" class="contacts__local-img">
@@ -162,29 +173,10 @@
 				</div>
 			</div>
 		</section>
-		<div class="popup" id="popup-contact">
-			<a href="#advantages" class="popup__area"></a>
-			<div class="popup__body">
-				<div class="popup__content">
-					<a href="#header" class="popup__close close-popup">X</a>
-					<div class="popup__title popup-link">Напишите нам</div><br>
-					<div>
-						<textarea class="popup__text" name="" id="" placeholder="Ввкдите Ваше сообщение" cols="30"
-							rows="10"></textarea>
-						<button class="popup__btn-contact">Отправить</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-
-
 	</div>
-	</div>
-
 	<!-- Подключаем jQuery -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<!-- Подключаем script -->
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+	<!-- Подключаем файл JS скриптов -->
 	<script src="js/script.js"></script>
 </body>
 
